examples/bad/local_definition.soy
x = 10;

def f() -> None {
    y = 10;
}

f();
print(y); # ERROR: y is not defined
